Learned file structure for project and useState

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <title>Itro. to React</title>
+    <link rel="stylesheet" href="./src/index.css">
+    <link rel="shortcut icon" href="./src/assets/favicon.png" type="image/x-icon">
+    <title>Flavor Fusion</title>
 </head>
 <body>
     <div id="root">Not Rendered</div>
-    <script type="module" src="index.js" defer></script>
+    <script type="module" src="./src/index.js" defer></script>
     <!-- <script type="module" src="AppTest.js"></script> -->
 </body>
 </html>
