--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/index.css">
     <link rel="shortcut icon" href="./src/assets/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/04f0fe6357.js" crossorigin="anonymous"></script>
     <title>Flavor Fusion</title>
 </head>
 <body>
